--- a/.drone.yml
+++ b/.drone.yml
@@ -20,6 +20,7 @@ pipeline:
       - DATABASE_PASSWORD=root
       - DATABASE_HOST=postgres
       - DATABASE_PORT=5432
+      - DJANGO_SETTINGS_MODULE=products_service.settings.base
     when:
       event: [pull_request, push, tag]
 
